@@ -49,11 +49,6 @@ SERVER:
 - Network service autodiscovery
 - New attribute: disable status/configuration poll
 - Override Net.IP.Forward
-- Looks like object not marked as modified when platform name or agent
-  version changes
-- Bug: after server restart, all empty key and ack_key fields in EPP contains
-  strings of one space character instead of empty string, which cause
-  very interesting effects with alarms autoacknowlegement
 - NxAdm -- status, stop server
 - NxDbMgr -- backup before db recover
 - Replace mutex with r/w lock for session list access
