@@ -15,6 +15,8 @@
 - Fixed bug with StartupDelay parameter handling in core agent
 - Fixed communication problems on FreeBSD
 - Bug #0000003 fixed
+- Bug fixed: objects was not marked as modified when platform name or agent
+  version changes
 
 
 *
